# aquaguard

./: .gitignore  README.md
docs/: architecture.md  implementation-spec.md
docs/esphome/manual/: aquaguard-zone-settings-el.md
esphome/: aquaguard-main.yaml  secrets.example.yaml
stats/: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
stats/aquaguard_stats/: __init__.py  __main__.py  config.py  display.py  esphome_client.py  i18n.py  models.py  repository.py  scheduler.py  service.py  shelly_client.py  translations.json  web.py
stats/aquaguard_stats/static/: styles.css
stats/aquaguard_stats/templates/: index.html  zone.html
stats/tests/: test_display.py  test_esphome_client.py  test_esphome_mapping.py  test_i18n.py  test_models.py  test_repository.py  test_service.py  test_shelly_client.py
